added components for view, list, update, delete employments added configuration for protect link that required valid user Solved issue: employment, session

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
         <a href="/education" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Educacion</a>
       </li>
       <li class="nav-item">
-        <a href="/employment" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Trabajos</a>
+        <a href="/employment" class="nav-link" *ngIf="isLoggedIn">Trabajos</a>
       </li>
       <li class="nav-item">
         <a href="/skill" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Habilidades</a>
