added components for view, update photo Solved issue: photo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,22 +6,22 @@
         <a href="/home" class="nav-link" routerLink="home">CV Online</a>
       </li>
       <li class="nav-item">
-        <a href="/resume" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Curriculum</a>
+        <a href="/resume" class="nav-link" *ngIf="isLoggedIn">Curriculum</a>
       </li>
       <li class="nav-item">
-        <a href="/personal" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Informacion Personal</a>
+        <a href="/personal" class="nav-link" *ngIf="isLoggedIn" >Informacion Personal</a>
       </li>
       <li class="nav-item">
-        <a href="/photo" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Foto</a>
+        <a href="/photo" class="nav-link" *ngIf="isLoggedIn">Foto</a>
       </li>
       <li class="nav-item">
-        <a href="/education" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Educacion</a>
+        <a href="/education" class="nav-link" *ngIf="isLoggedIn">Educacion</a>
       </li>
       <li class="nav-item">
         <a href="/employment" class="nav-link" *ngIf="isLoggedIn">Trabajos</a>
       </li>
       <li class="nav-item">
-        <a href="/skill" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Habilidades</a>
+        <a href="/skill" class="nav-link" *ngIf="isLoggedIn">Habilidades</a>
       </li>
     </ul>
 
