added components for view, list, create, update education added components for view, list, create, update skill added components for view consolidate resume added documentation Solved issue: education, skill, consolidate resume

--- a/src/app/components/add-employment/add-employment.component.html
+++ b/src/app/components/add-employment/add-employment.component.html
@@ -42,12 +42,12 @@
           #jobTitle="ngModel"
         />
         <div class="alert-danger" *ngIf="jobTitle.errors && f.submitted">
-          <div *ngIf="jobTitle.errors.required">Empresa es un campo obligatorio</div>
+          <div *ngIf="jobTitle.errors.required">Cargo es un campo obligatorio</div>
           <div *ngIf="jobTitle.errors.minlength">
-            Empresa debe poseer 3 caracteres minimo
+            Cargo debe poseer 3 caracteres minimo
           </div>
           <div *ngIf="jobTitle.errors.maxlength">
-            Empresa debe poseer 50 caracteres maximo
+            Cargo debe poseer 50 caracteres maximo
           </div>
         </div>
       </div>
