--- a/src/app/components/resume-details/resume-details.component.html
+++ b/src/app/components/resume-details/resume-details.component.html
@@ -1,7 +1,7 @@
 <div>
   <br>
   <div *ngIf="form.id" class="edit-form">
-    <h4>Empleo</h4>
+    <h4>Informacion Personal</h4>
     <form
       *ngIf="!isSuccessful"
       name="form"
